# Heisenberg-Physical-Interactions

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: version.rc.in
src/: ActivatorHandler.cpp  ActivatorHandler.h  Config.cpp  Config.h  CookingHandler.cpp  CookingHandler.h  DropToHand.cpp  DropToHand.h  EmbeddedOffsets.h  F4VROffsets.h  FRIKInterface.cpp  FRIKInterface.h  FingerAnimator.cpp  FingerAnimator.h  Grab.cpp  Grab.h  GrabConstraint.cpp  GrabConstraint.h  HIGGS.cpp  HIGGS.h  Hand.cpp  Hand.h  HandCollision.cpp  HandCollision.h  HavokPhysicsKeyframe.cpp  HavokPhysicsKeyframe.h  Heisenberg.cpp  Heisenberg.h  HeisenbergInterface.cpp  HeisenbergInterface001.h  Highlight.cpp  Highlight.h  Hooks.cpp  Hooks.h  ItemInsertHandler.cpp  ItemInsertHandler.h  ItemOffsets.cpp  ItemOffsets.h  ItemPositionConfigMode.cpp  ItemPositionConfigMode.h  (+31 more)
src/api/: FRIKApi.h
